eth-node/k8s/master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: master-service
spec:
  ports:
    - port: 8545
      name: rpc
    - port: 8546
      name: websocket
    - port: 30303
      name: discovery

  selector:
    component: master-node
