eth-node/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "ingress"

spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /rpc
            pathType: Prefix
            backend:
              service:
                name: master-service
                port: 
                  number: 8545
          - path: /ws
            pathType: Prefix
            backend:
              service:
                name: master-service
                port: 
                  name: websocket
